replace url with 'path'

--- a/dataframe_netzdg.ipynb
+++ b/dataframe_netzdg.ipynb
@@ -88,8 +88,8 @@
       "outputs": [],
       "source": [
         "# Load the data frame ONE on NetzDG into colab\n",
-        "url = '/home/caio/Documents/Jens_project/dataframe-csv/tweets_NetzDG.csv'\n",
-        "df_NetzDG = pd.read_csv(url,index_col=0)"
+        "path = '/home/caio/Documents/Jens_project/dataframe-csv/tweets_NetzDG.csv'\n",
+        "df_NetzDG = pd.read_csv(path,index_col=0)"
       ]
     },
     {
