change data source

--- a/NetzDG_context.ipynb
+++ b/NetzDG_context.ipynb
@@ -16,7 +16,7 @@
         "id": "6ZhMP9PE2sNT"
       },
       "source": [
-        "## Install and import: Run this cell to load the data (use 'df_netzdg_blue&purple.csv' as data)"
+        "## Install and import: Run this cell to load the data (use 'df_netzdg_blue&purple.csv' & 'df_colours.csv' as data)"
       ]
     },
     {
@@ -43,10 +43,11 @@
         "from nltk import ngrams\n",
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
         "# Load the data frame into colab\n",
-        "url = ('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/df_netzdg_blue&purple.csv')\n",
-        "#url = 'df_netzdg_blue&purple.csv'\n",
+        "#url = ('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/df_netzdg_blue&purple.csv')\n",
+        "url = 'df_netzdg_blue&purple.csv'\n",
         "df = pd.read_csv(url,index_col=0)\n",
-        "df_colours = pd.read_csv('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/df_colours.csv', encoding='latin1')\n",
+        "#df_colours = pd.read_csv('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/df_colours.csv', encoding='latin1')\n",
+        "df_colours = pd.read_csv('df_colours.csv', encoding='latin1')\n",
         "pd.set_option('display.max_colwidth', None)\n",
         "# prompt: remove duplicated values in column 'text'\n",
         "df.drop_duplicates(subset='text', inplace=True)\n",
