changed all the df files

--- a/NetzDG_Analyser.ipynb
+++ b/NetzDG_Analyser.ipynb
@@ -52,7 +52,7 @@
         "from nltk import ngrams\n",
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
         "# Load the data frame into colab\n",
-        "url = 'https://raw.githubusercontent.com/caiocmello/netzdg/refs/heads/main/df_netzdg_blue%26purple.csv'\n",
+        "url = 'df_netzdg_blue%26purple.csv'\n",
         "df = pd.read_csv(url,index_col=0)"
       ]
     },
