--- a/NetzDG_URLs.ipynb
+++ b/NetzDG_URLs.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "8wF1VhEbuFqM"
@@ -21,7 +21,7 @@
       "source": [
         "# @title Run to install packages (use csv file 'df_urls.csv')\n",
         "import pandas as pd\n",
-        "df = pd.read_csv('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/URL_analysis/final_dataframe_urls.csv')\n"
+        "df = pd.read_csv('final_dataframe_urls.csv')\n"
       ]
     },
     {
