--- a/NetzDG_context.ipynb
+++ b/NetzDG_context.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "hhYCUfaB2gZG"
       },
@@ -44,7 +44,7 @@
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
         "# Load the data frame into colab\n",
         "#url = ('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/df_netzdg_blue&purple.csv')\n",
-        "url = 'https://raw.githubusercontent.com/caiocmello/netzdg/refs/heads/main/df_netzdg_blue%26purple.csv'\n",
+        "url = 'df_netzdg_blue&purple.csv'\n",
         "df = pd.read_csv(url,index_col=0)\n",
         "#df_colours = pd.read_csv('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/df_colours.csv', encoding='latin1')\n",
         "file_id = '1NJBXn4o4TBA6mh1gbABjEtUwZRHczstW'\n",
