--- a/Sec230_context.ipynb
+++ b/Sec230_context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "4dd39eab",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "from nltk import ngrams\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "# Load the dataframe into colab\n",
-    "url = 'https://raw.githubusercontent.com/caiocmello/netzdg/refs/heads/main/sec230_tweets_postedby_top100.csv'\n",
+    "url = 'sec230_tweets_postedby_top100.csv'\n",
     "df = pd.read_csv(url,index_col=0)\n",
     "pd.set_option('display.max_colwidth', None)\n",
     "# remove duplicated values in column 'text'\n",
