--- a/perennis_scraping.ipynb
+++ b/perennis_scraping.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNY0vOHe82iOuUKxuBjGwSU",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/caiocmello/netzdg/blob/main/perennis_scraping.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 81,
+      "metadata": {
+        "id": "leiIsYaPZbty"
+      },
+      "outputs": [],
       "source": [
         "import urllib.request\n",
         "import re\n",
@@ -37,28 +26,28 @@
         "failedAttempts = []\n",
         "\n",
         "pattern = r'<div class=\"td-module-thumb\"><a href=\"(.*?)\"  rel=\"bookmark\"'"
-      ],
-      "metadata": {
-        "id": "leiIsYaPZbty"
-      },
-      "execution_count": 81,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 84,
+      "metadata": {
+        "id": "AGd9nFQYgkOa"
+      },
+      "outputs": [],
       "source": [
         "# Define query to be searched on the blog\n",
         "\n",
         "query = 'Gesetz+zur+Verbesserung+der+Rechtsdurchsetzung+in+sozialen+Netzwerken'"
-      ],
-      "metadata": {
-        "id": "AGd9nFQYgkOa"
-      },
-      "execution_count": 84,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 85,
+      "metadata": {
+        "id": "lVBHEghxjImt"
+      },
+      "outputs": [],
       "source": [
         "# Loop through the blog pages and collect URLs\n",
         "\n",
@@ -90,18 +79,11 @@
         "  startValue = startValue + 1\n",
         "\n",
         "  time.sleep(10)"
-      ],
-      "metadata": {
-        "id": "lVBHEghxjImt"
-      },
-      "execution_count": 85,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "list_urls"
-      ],
+      "execution_count": 86,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,10 +91,8 @@
         "id": "2e0FzX63jpLo",
         "outputId": "e51f3859-d381-4ab8-a1f8-2b1c80527a33"
       },
-      "execution_count": 86,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['https://philosophia-perennis.com/2021/06/15/zensur-jetzt-geht-es-telegram-an-den-kragen/',\n",
@@ -120,29 +100,30 @@
               " 'https://philosophia-perennis.com/2017/06/29/bundestag-netzwerkdurchsetzungsgesetz/']"
             ]
           },
+          "execution_count": 86,
           "metadata": {},
-          "execution_count": 86
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "list_urls"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Remove duplicates\n",
-        "list_urls = list(set(list_urls))"
-      ],
+      "execution_count": 67,
       "metadata": {
         "id": "1mErEf3JoxbH"
       },
-      "execution_count": 67,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Remove duplicates\n",
+        "list_urls = list(set(list_urls))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Count how many URLs there are in list_urls\n",
-        "print(len(list_urls))"
-      ],
+      "execution_count": 87,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -150,34 +131,35 @@
         "id": "5uJTm-u8lULi",
         "outputId": "72430f55-9f58-428f-aa79-decfd101b31c"
       },
-      "execution_count": 87,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3\n"
           ]
         }
+      ],
+      "source": [
+        "# Count how many URLs there are in list_urls\n",
+        "print(len(list_urls))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_urls = pd.DataFrame(list_urls, columns=['URL'])\n",
-        "display(df_urls.head())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "JE1RDBCau8ZS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_urls = pd.DataFrame(list_urls, columns=['URL'])\n",
+        "display(df_urls.head())"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_urls.info()"
-      ],
+      "execution_count": 89,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,11 +167,10 @@
         "id": "19vWNH1zpjU6",
         "outputId": "a9db134b-aff0-4720-f984-2be86f8b1182"
       },
-      "execution_count": 89,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 3 entries, 0 to 2\n",
@@ -201,24 +182,25 @@
             "memory usage: 156.0+ bytes\n"
           ]
         }
+      ],
+      "source": [
+        "df_urls.info()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_urls.to_csv('philosophia_perennis_Gesetz+zur+Verbesserung+der+Rechtsdurchsetzung+in+sozialen+Netzwerken.csv')"
-      ],
+      "execution_count": 90,
       "metadata": {
         "id": "mGw1_RYTpJ9e"
       },
-      "execution_count": 90,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_urls.to_csv('philosophia_perennis_Gesetz+zur+Verbesserung+der+Rechtsdurchsetzung+in+sozialen+Netzwerken.csv')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "failedAttempts"
-      ],
+      "execution_count": 91,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -226,19 +208,37 @@
         "id": "wyJa-299pKWa",
         "outputId": "f6f94bfc-f332-480d-82c6-fb04e1ba53b3"
       },
-      "execution_count": 91,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[]"
             ]
           },
+          "execution_count": 91,
           "metadata": {},
-          "execution_count": 91
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "failedAttempts"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNY0vOHe82iOuUKxuBjGwSU",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
