--- a/NetzDG_URLs(incl_RT).ipynb
+++ b/NetzDG_URLs(incl_RT).ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "4XiQ11EujYku"
@@ -38,7 +38,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
         "import pandas as pd\n",
-        "df = pd.read_csv('/Users/caio.mello/Documents/NetzDG_project/NetzDG_data/URL_analysis/final_dataframe_urls.csv')\n",
+        "df = pd.read_csv('final_dataframe_urls.csv')\n",
         "pd.set_option('display.max_rows', None)  # Show all rows\n",
         "pd.set_option('display.max_columns', None)  # Show all columns\n",
         "df['original_url'] = df['original_url'].astype(str)\n",
